[package]
name = "panic-log"
version = "0.1.0"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "MIT"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/rust-template"
description = "A useful description"
include = ["src", "LICENSE"]
categories = [] # https://crates.io/category_slugs
keywords = []


[dependencies]
log = "0.4"