[package]
name = "panic-log"
version = "0.3.0"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "MIT"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/panic-log"
description = "Log panics to the `log` macro as error"
include = ["src", "LICENSE"]
categories = ["development-tools", "development-tools::debugging"] # https://crates.io/category_slugs
keywords = ["log", "panic"]

[dependencies]
log = "0.4"
